--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="MCaLEYfZB8HfZSTyMQYZyBeRMXGoKt46uvrwEp-KN3M">
-    <meta name="msvalidate.01" content="AAA" />
+    <meta name="msvalidate.01" content="AAA"/>
     <link rel="canonical" href="https://www.openshift.com/index.html">
     <title>OpenShift by Red Hat</title>
-    <link rel="apple-touch-icon-precomposed" href="https://assets.openshift.net/content/subdomain/favicon32x32.png" type="image/png" />
-    <link href="https://assets.openshift.net/content/subdomain/favicon32x32.png" rel="icon" type="image/png" />
-    <!--[if IE]><link href="https://assets.openshift.net/content/subdomain/favicon.ico" rel="icon" type="image/ico" /><![endif]-->
-    <link href="https://assets.openshift.net/content/subdomain.css" rel="stylesheet" type="text/css" media="screen, print" />
+    <link rel="apple-touch-icon-precomposed" href="https://assets.openshift.net/content/subdomain/favicon32x32.png"
+          type="image/png"/>
+    <link href="https://assets.openshift.net/content/subdomain/favicon32x32.png" rel="icon" type="image/png"/>
+    <!--[if IE]><link href="https://assets.openshift.net/content/subdomain/favicon.ico" rel="icon" type="image/ico" />
+    <![endif]-->
+    <link href="https://assets.openshift.net/content/subdomain.css" rel="stylesheet" type="text/css"
+          media="screen, print"/>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://assets.openshift.net/content/html5shiv.js" type="text/javascript"></script>
@@ -21,15 +24,22 @@
     <!-- IE8 requires jQuery v1.x -->
     <script src="https://assets.openshift.net/content/modernizr.js" type="text/javascript"></script>
     <script src="https://assets.openshift.net/content/subdomain.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <h1>
-      statuspage.io notification registration.
-    </h1>
-    <h2>Register using the form below</h2>
-    <form class="register" action="#" method="post">
-      <input type="text" name="rhcloud-login" value="">
-      <input type="button" name="submit" value="Submit">
+</head>
+<body>
+<h1>
+    statuspage.io notification registration.
+</h1>
+{% if username %}
+    <h3>Hi {{ username }}</h3>
+    <form class="logout" action="/logout" method="post">
+        <button type="submit" name="logout">Logout</button>
     </form>
-  </body>
+{% else %}
+    <h2>Register using the form below</h2>
+    <form class="register" action="/register" method="post">
+        <input type="text" name="rhcloud-login" value="">
+        <input type="submit" name="submit" value="Submit">
+    </form>
+{% endif %}
+</body>
 </html>
